--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Outfit:wght@100;200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Outfit:wght@100;200;300;400;500;600;700&display=swap");
+
+.tooltip-arrow::before {
+    content: "";
+    position: absolute;
+    bottom: -5px; /* Adjust this value to position the arrow */
+    right: 5px;
+    transform: translateX(-50%);
+    border-width: 5px;
+    border-style: solid;
+    border-color: #333 transparent transparent transparent;
+}
+
+.perspective {
+    perspective: 1000px;
+}
+.preserve-3d {
+    transform-style: preserve-3d;
+}
+.backface-hidden {
+    backface-visibility: hidden;
+}
+.rotate-y-180 {
+    transform: rotateY(180deg);
+}
+
+/* Estilo para convertir una imagen a silueta monocromática en color #444 */
+.silhouette {
+    /* filter: grayscale(1000) brightness(1); */
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: cover;
+    mask-size: cover;
+    background-color: red;
+    content: "";
+    display: block;
+}
+
+.scroll-box {
+    scrollbar-width: thin; /* Firefox */
+    scrollbar-color: #444 #4b5563; /* Firefox: thumb track */
+    scrollbar-track-color: #333;
+}
